--- a/.babelrc
+++ b/.babelrc
@@ -8,7 +8,17 @@
           "ie": "11"
         }
       }
-    ]
+    ],
+    "@babel/preset-react"
   ],
-  "plugins": ["@babel/plugin-transform-runtime"]
+  "plugins": [
+    "@babel/plugin-transform-runtime",
+    "@babel/plugin-transform-react-jsx",
+    [
+      "@babel/plugin-proposal-class-properties",
+      {
+        "loose": true
+      }
+    ]
+  ]
 }
