--- a/package.json
+++ b/package.json
@@ -20,10 +20,19 @@
   },
   "dependencies": {
     "@babel/core": "^7.12.9",
-    "@babel/preset-env": "^7.12.7",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-transform-react-jsx": "^7.12.17",
+    "@babel/preset-env": "^7.13.10",
+    "@babel/preset-react": "^7.12.13",
+    "antd": "^4.13.1",
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.0",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^1.3.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "style-loader": "^2.0.0",
     "vue": "^2.6.12",
     "vue-style-loader": "^4.1.2"
