--- a/.babelrc
+++ b/.babelrc
@@ -12,6 +12,9 @@
     "@babel/preset-react"
   ],
   "plugins": [
+    [
+      "@babel/plugin-proposal-private-methods", { "loose": true }
+    ],
     "@babel/plugin-transform-runtime",
     "@babel/plugin-transform-react-jsx",
     [
