--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-react": "^7.12.13",
     "antd": "^4.13.1",
+    "copy-webpack-plugin": "6",
     "css-loader": "^5.0.1",
+    "fabric": "^4.6.0",
     "html-webpack-plugin": "^4.5.0",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^1.3.1",
+    "pdfjs": "^2.4.7",
+    "pdfjs-dist": "2.4.456",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "redux": "^4.1.0",
