--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@babel/plugin-transform-react-jsx": "^7.12.17",
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-react": "^7.12.13",
-    "antd": "^4.13.1",
+    "antd": "3.26.5",
     "copy-webpack-plugin": "6",
     "css-loader": "^5.0.1",
     "fabric": "^4.6.0",
